--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="build/css/vendor.css">
+    <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
     <title>Alarm Clock</title>
   </head>
@@ -22,7 +21,7 @@
         <button type="submit">Set Alarm</button>
       </form>
       <div class="alarm-display">
-        <h1>Wake Up!</h1>
+        
       </div>
     </div>
   </body>
