--- a/index.html
+++ b/index.html
@@ -6,24 +6,9 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
-    <title>Alarm Clock</title>
+    <title></title>
   </head>
   <body>
-    <div class="container">
-      <h1>Alarm Clock</h1>
-      <div class="moment">
-
-      </div>
-      <form id="alarm">
-        <div class="form-group">
-          <label for="setTime">Enter a time:</label>
-          <input type="time" class="form-control setTime">
-        </div>
-        <button type="submit">Set Alarm</button>
-      </form>
-      <div class="alarm-display">
-        <h1>Wake up!</h1>
-      </div>
-    </div>
+    
   </body>
 </html>
