--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <link rel="stylesheet" href="build/css/vendor.css">
-    <link rel="stylesheet" href="css/styles.css">
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
-    <title></title>
   </head>
   <body>
-    
+    <div class="container">
+      <h1>Doctor Search</h1>
+      <h3>Find a Doctor Near You</h3>
+      <h5>Search by City, State and Medical Condition</h5>
+      <form id="doctorSearch">
+        <div class="form-group">
+          <label for="city">City</label>
+          <input id="city" type="text" name="city">
+          <label for="state">State</label>
+          <input id="state" type="text" name="state">
+          <label for="condition">Symptom</label>
+          <input id="condition" type="text" name="condition">
+          <button class="btn-success" type="submit">Submit</button>
+        </div>
+      </form>
+      <ul id="listOfDocs"></ul>
+    </div>
   </body>
 </html>
