data from api logs to the console upon search, api call in the backend

--- a/index.html
+++ b/index.html
@@ -9,14 +9,10 @@
     <div class="container">
       <h1>Doctor Search</h1>
       <h3>Find a Doctor Near You</h3>
-      <h5>Search by City, State and Medical Condition</h5>
+      <h5>Search by Medical Condition</h5>
       <form id="doctorSearch">
         <div class="form-group">
-          <label for="city">City</label>
-          <input id="city" type="text" name="city">
-          <label for="state">State</label>
-          <input id="state" type="text" name="state">
-          <label for="condition">Symptom</label>
+          <label for="condition">Symptom or Medical Issue</label>
           <input id="condition" type="text" name="condition">
           <button class="btn-success" type="submit">Submit</button>
         </div>
