add doc pics and specialty, change where background image covers

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button class="btn-success" type="submit">Submit</button>
           </div>
         </form>
-        <ul id="listOfDocs"></ul>
     </div>
+    <ul id="listOfDocs" class="row"></ul>
   </body>
 </html>
